@@ -1,2 +1,0 @@
-UPnP-Inspector is an UPnP Device and Service analyzer,
-based on the Coherence DLNA/UPnP framework.
