@@ -1,66 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2009/07/08 17:44:20 drochner Exp $
-bin/upnp-inspector
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/upnp_inspector/__init__.py
-${PYSITELIB}/upnp_inspector/__init__.pyc
-${PYSITELIB}/upnp_inspector/__init__.pyo
-${PYSITELIB}/upnp_inspector/about.py
-${PYSITELIB}/upnp_inspector/about.pyc
-${PYSITELIB}/upnp_inspector/about.pyo
-${PYSITELIB}/upnp_inspector/base.py
-${PYSITELIB}/upnp_inspector/base.pyc
-${PYSITELIB}/upnp_inspector/base.pyo
-${PYSITELIB}/upnp_inspector/details.py
-${PYSITELIB}/upnp_inspector/details.pyc
-${PYSITELIB}/upnp_inspector/details.pyo
-${PYSITELIB}/upnp_inspector/devices.py
-${PYSITELIB}/upnp_inspector/devices.pyc
-${PYSITELIB}/upnp_inspector/devices.pyo
-${PYSITELIB}/upnp_inspector/events.py
-${PYSITELIB}/upnp_inspector/events.pyc
-${PYSITELIB}/upnp_inspector/events.pyo
-${PYSITELIB}/upnp_inspector/extract.py
-${PYSITELIB}/upnp_inspector/extract.pyc
-${PYSITELIB}/upnp_inspector/extract.pyo
-${PYSITELIB}/upnp_inspector/icons/audio-volume-high.png
-${PYSITELIB}/upnp_inspector/icons/audio-volume-low.png
-${PYSITELIB}/upnp_inspector/icons/audio-volume-medium.png
-${PYSITELIB}/upnp_inspector/icons/audio-volume-muted.png
-${PYSITELIB}/upnp_inspector/icons/audio-x-generic.png
-${PYSITELIB}/upnp_inspector/icons/blankalbum.png
-${PYSITELIB}/upnp_inspector/icons/camera-web.png
-${PYSITELIB}/upnp_inspector/icons/folder.png
-${PYSITELIB}/upnp_inspector/icons/image-x-generic.png
-${PYSITELIB}/upnp_inspector/icons/inspector-icon.png
-${PYSITELIB}/upnp_inspector/icons/inspector-logo.png
-${PYSITELIB}/upnp_inspector/icons/media-playback-pause.png
-${PYSITELIB}/upnp_inspector/icons/media-playback-start.png
-${PYSITELIB}/upnp_inspector/icons/media-playback-stop.png
-${PYSITELIB}/upnp_inspector/icons/media-renderer.png
-${PYSITELIB}/upnp_inspector/icons/media-seek-backward.png
-${PYSITELIB}/upnp_inspector/icons/media-seek-forward.png
-${PYSITELIB}/upnp_inspector/icons/media-skip-backward.png
-${PYSITELIB}/upnp_inspector/icons/media-skip-forward.png
-${PYSITELIB}/upnp_inspector/icons/network-light.png
-${PYSITELIB}/upnp_inspector/icons/network-server.png
-${PYSITELIB}/upnp_inspector/icons/printer.png
-${PYSITELIB}/upnp_inspector/icons/upnp-action-arg-in.png
-${PYSITELIB}/upnp_inspector/icons/upnp-action-arg-out.png
-${PYSITELIB}/upnp_inspector/icons/upnp-action.png
-${PYSITELIB}/upnp_inspector/icons/upnp-device.png
-${PYSITELIB}/upnp_inspector/icons/upnp-service.png
-${PYSITELIB}/upnp_inspector/icons/upnp-state-variable.png
-${PYSITELIB}/upnp_inspector/icons/video-x-generic.png
-${PYSITELIB}/upnp_inspector/log.py
-${PYSITELIB}/upnp_inspector/log.pyc
-${PYSITELIB}/upnp_inspector/log.pyo
-${PYSITELIB}/upnp_inspector/mediarenderer.py
-${PYSITELIB}/upnp_inspector/mediarenderer.pyc
-${PYSITELIB}/upnp_inspector/mediarenderer.pyo
-${PYSITELIB}/upnp_inspector/mediaserver.py
-${PYSITELIB}/upnp_inspector/mediaserver.pyc
-${PYSITELIB}/upnp_inspector/mediaserver.pyo
