@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.4 2021/10/26 11:07:07 nia Exp $
-
-BLAKE2s (UPnP-Inspector-0.2.2.tar.gz) = 49bd0ca1bd30f4980b85209a2a3c9b7479cf3b5e697ffa11476c58a6b4e45454
-SHA512 (UPnP-Inspector-0.2.2.tar.gz) = e7fecba8613f87b3fff763102a2a01a71d8c7bb85b176e5a23db56796baf0d55f48268d880ae4b84ec73379426f44bf17fa974dbd6194c8192d6bb5f0ac4f5ed
-Size (UPnP-Inspector-0.2.2.tar.gz) = 134150 bytes
